--- a/.github/workflows/download-dataset.yaml
+++ b/.github/workflows/download-dataset.yaml
@@ -20,42 +20,30 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Install dependencies
+    - name: Setup Miniconda
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        auto-update-conda: true
+        python-version: '3.10'
+
+    - name: Create and activate Conda environment
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    #   pip install dvc[gdrive]  # Install DVC with Google Drive support
+        conda env create -f environment.yml
+        conda activate samplifi
 
-    # - name: Configure DVC
-    #   run: |
-    #     dvc remote add -d myremote gdrive://<folder-id>  # Replace <folder-id> with your Google Drive folder ID
-    #     echo 'machine drive.google.com password ${{ secrets.GDRIVE_TOKEN }}' > ~/.dvc/tmp/gdrive-user-credentials.json
-
-    # - name: Download dataset with DVC
-    #   run: |
-    #     dvc pull ${{ github.event.inputs.dataset }}.dvc
-
-    download:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
 
     - name: Download dataset
+      timeout-minutes: 180
       run: |
         python download-mir-dataset.py --dataset "${{ github.event.inputs.dataset }}"
 
     - name: Run Samplifi
       run: |
-        python run-samplifi.py ${{ github.event.inputs.dataset }}
+        python run-samplifi.py --dataset ${{ github.event.inputs.dataset }}
 
-jobs:
-  download:
-    runs-on: ubuntu-latest
+    - name: Upload CSV as artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: samplifi-output
+        path: haaqi_scores.csv # Replace with the path to your CSV file
 
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Download dataset
-      run: |
-        python download-mir-dataset.py --dataset "${{ github.event.inputs.dataset }}"
