--- a/environment.yml
+++ b/environment.yml
@@ -4,72 +4,110 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
-  - bzip2=1.0.8=h5eee18b_5
-  - ca-certificates=2023.12.12=h06a4308_0
-  - expat=2.5.0=h6a678d5_0
+  - ca-certificates=2024.3.11=h06a4308_0
   - ld_impl_linux-64=2.38=h1181459_1
   - libffi=3.4.4=h6a678d5_0
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
   - libstdcxx-ng=11.2.0=h1234567_1
-  - libuuid=1.41.5=h5eee18b_0
   - ncurses=6.4=h6a678d5_0
   - openssl=3.0.13=h7f8727e_0
-  - pip=23.3.1=py312h06a4308_0
-  - python=3.12.2=h996f2a0_0
+  - pip=23.3.1=py39h06a4308_0
+  - python=3.9.19=h955ad1f_0
   - readline=8.2=h5eee18b_0
-  - setuptools=68.2.2=py312h06a4308_0
+  - setuptools=68.2.2=py39h06a4308_0
   - sqlite=3.41.2=h5eee18b_0
   - tk=8.6.12=h1ccaba5_0
-  - tzdata=2024a=h04d1e81_0
-  - wheel=0.41.2=py312h06a4308_0
+  - wheel=0.41.2=py39h06a4308_0
   - xz=5.4.6=h5eee18b_0
   - zlib=1.2.13=h5eee18b_0
   - pip:
-      - absl-py==2.1.0
+      - absl-py==1.4.0
+      - aiohttp==3.9.3
+      - aiosignal==1.3.1
+      - antlr4-python3-runtime==4.9.3
+      - array-record==0.5.0
+      - asttokens==2.4.1
       - astunparse==1.6.3
-      - audioread==3.0.1
-      - certifi==2024.2.2
-      - cffi==1.16.0
-      - charset-normalizer==3.3.2
+      - async-timeout==4.0.3
+      - attrs==23.2.0
+      - basic-pitch==0.3.0
+      - beautifulsoup4==4.12.3
+      - black==24.3.0
+      - bokeh==3.4.0
+      - cachetools==5.3.3
+      - chardet==5.2.0
+      - click==8.1.7
+      - cloudml-hypertune==0.1.0.dev6
+      - cloudpickle==3.0.0
       - contourpy==1.2.0
+      - crepe==0.0.12
       - cycler==0.12.1
+      - ddsp==3.6.0
       - decorator==5.1.1
+      - deprecated==1.2.14
+      - dill==0.3.4
       - dm-tree==0.1.8
-      - filelock==3.13.1
+      - etils==1.5.2
+      - exceptiongroup==1.2.0
+      - executing==2.0.1
       - flatbuffers==24.3.7
       - fonttools==4.50.0
-      - fsspec==2024.3.0
-      - future==1.0.0
-      - gast==0.5.4
+      - frozenlist==1.4.1
+      - fsspec==2024.3.1
+      - gast==0.4.0
+      - gdown==5.1.0
       - gin==0.1.6
       - gin-config==0.5.0
+      - google-api-core==2.18.0
+      - google-auth==2.29.0
+      - google-auth-oauthlib==0.4.6
+      - google-cloud-core==2.4.1
+      - google-cloud-storage==2.16.0
+      - google-crc32c==1.5.0
       - google-pasta==0.2.0
+      - google-resumable-media==2.7.0
+      - googleapis-common-protos==1.63.0
       - grpcio==1.62.1
       - h5py==3.10.0
-      - idna==3.6
-      - jinja2==3.1.3
+      - hmmlearn==0.2.7
+      - hydra-core==1.3.2
+      - hydra-submitit-launcher==1.2.0
+      - imageio==2.34.0
+      - importlib-metadata==7.1.0
+      - importlib-resources==6.4.0
+      - intervaltree==3.1.0
+      - ipython==8.18.1
+      - jams==0.3.4
+      - jedi==0.19.1
       - joblib==1.3.2
-      - keras==3.0.5
+      - jsonschema==4.21.1
+      - jsonschema-specifications==2023.12.1
+      - keras==3.1.1
       - kiwisolver==1.4.5
       - lazy-loader==0.3
-      - libclang==16.0.6
+      - libclang==18.1.1
       - librosa==0.10.1
+      - lightning-utilities==0.11.1
       - llvmlite==0.42.0
       - markdown==3.6
       - markdown-it-py==3.0.0
-      - markupsafe==2.1.5
       - matplotlib==3.8.3
+      - matplotlib-inline==0.1.6
       - mdurl==0.1.2
-      - mido==1.3.2
+      - mido==1.2.10
       - mir-eval==0.7
+      - mirdata==0.3.8
       - ml-dtypes==0.3.2
       - mpmath==1.3.0
       - msgpack==1.0.8
+      - multidict==6.0.5
+      - mypy-extensions==1.0.0
       - namex==0.0.7
       - networkx==3.2.1
-      - numba==0.59.0
-      - numpy==1.26.4
+      - note-seq==0.0.3
+      - numba==0.59.1
+      - numpy==1.23.5
       - nvidia-cublas-cu12==12.1.3.1
       - nvidia-cuda-cupti-cu12==12.1.105
       - nvidia-cuda-nvrtc-cu12==12.1.105
@@ -82,33 +120,82 @@ dependencies:
       - nvidia-nccl-cu12==2.19.3
       - nvidia-nvjitlink-cu12==12.4.99
       - nvidia-nvtx-cu12==12.1.105
+      - oauthlib==3.2.2
+      - omegaconf==2.3.0
       - opt-einsum==3.3.0
-      - packaging==23.2
+      - optree==0.10.0
+      - packaging==20.9
+      - pandas==2.2.1
+      - parso==0.8.3
+      - pathspec==0.12.1
+      - pexpect==4.9.0
       - pillow==10.2.0
       - platformdirs==4.2.0
-      - pooch==1.8.1
       - pretty-midi==0.2.10
-      - protobuf==4.25.3
-      - pycparser==2.21
+      - promise==2.3
+      - prompt-toolkit==3.0.43
+      - proto-plus==1.23.0
+      - protobuf==3.20.3
+      - psutil==5.9.8
+      - ptyprocess==0.7.0
+      - pure-eval==0.2.2
+      - pyasn1==0.5.1
+      - pyasn1-modules==0.3.0
+      - pybind11==2.11.1
+      - pyclarity==0.4.1
+      - pyflac==2.2.0
       - pygments==2.17.2
-      - pyparsing==3.1.2
+      - pyloudnorm==0.1.1
+      - pysocks==1.7.1
+      - pystoi==0.4.1
       - python-dateutil==2.9.0.post0
+      - pytorch-lightning==2.2.1
+      - pytz==2024.1
+      - pyyaml==6.0.1
+      - referencing==0.34.0
       - requests==2.31.0
+      - requests-oauthlib==2.0.0
       - rich==13.7.1
+      - rpds-py==0.18.0
+      - rsa==4.9
       - scikit-learn==1.4.1.post1
       - scipy==1.12.0
-      - six==1.16.0
+      - sortedcontainers==2.4.0
+      - sounddevice==0.4.6
       - soundfile==0.12.1
+      - soupsieve==2.5
       - soxr==0.3.7
+      - stack-data==0.6.3
+      - submitit==1.5.1
       - sympy==1.12
       - tensorboard==2.16.2
       - tensorboard-data-server==0.7.2
+      - tensorboard-plugin-wit==1.8.1
       - tensorflow==2.16.1
+      - tensorflow-datasets==4.9.0
+      - tensorflow-estimator==2.11.0
+      - tensorflow-hub==0.12.0
+      - tensorflow-io-gcs-filesystem==0.36.0
+      - tensorflow-metadata==1.13.0
+      - tensorflow-probability==0.24.0
+      - tensorflowjs==3.18.0
       - termcolor==2.4.0
-      - threadpoolctl==3.3.0
+      - tf-keras==2.16.0
+      - tflite-runtime==2.14.0
+      - tflite-support==0.4.4
+      - toml==0.10.2
+      - tomli==2.0.1
       - torch==2.2.1
+      - torchaudio==2.2.1
+      - torchmetrics==1.3.2
+      - tornado==6.4
+      - tqdm==4.66.2
+      - traitlets==5.14.2
+      - triton==2.2.0
       - typing-extensions==4.10.0
-      - urllib3==2.2.1
-      - werkzeug==3.0.1
-      - wrapt==1.16.0
+      - tzdata==2024.1
+      - wcwidth==0.2.13
+      - xyzservices==2023.10.1
+      - yarl==1.9.4
+      - zipp==3.18.1
 prefix: /home/xansec/.conda/envs/samplifi
