--- a/environment.yml
+++ b/environment.yml
@@ -161,6 +161,7 @@ dependencies:
       - rsa==4.9
       - scikit-learn==1.4.1.post1
       - scipy==1.12.0
+      - smart-open==7.0.3
       - sortedcontainers==2.4.0
       - sounddevice==0.4.6
       - soundfile==0.12.1
