--- a/.github/workflows/eval-samplifi-haaqi-against-dataset.yaml
+++ b/.github/workflows/eval-samplifi-haaqi-against-dataset.yaml
@@ -34,7 +34,7 @@ jobs:
       run: |
         source $(conda info --base)/etc/profile.d/conda.sh
         conda activate samplifi
-        python download-mir-dataset.py --dataset "${{ github.event.inputs.dataset }}"
+        python download-mir-dataset.py --dataset "${{ github.event.inputs.dataset }}" --silent
 
     - name: Run Samplifi
       run: |
