--- a/.github/workflows/eval-samplifi-against-dataset.yaml
+++ b/.github/workflows/eval-samplifi-against-dataset.yaml
@@ -39,7 +39,7 @@ jobs:
         source ~/.bashrc
         conda env create -f environment.yml
         conda activate samplifi
-        python -m pip install tensorflowjs ddsp --no-deps
+        python -m pip install tensorflowjs --no-deps
 
     - name: Download dataset
       timeout-minutes: 180
@@ -59,5 +59,5 @@ jobs:
       with:
         name: samplifi-output
         path: | 
-          haaqi_scores.csv
-          spectral_scores.csv
+          haaqi_scores_${{ github.event.inputs.dataset }}.csv
+          spectral_scores_${{ github.event.inputs.dataset }}.csv
