--- a/.github/workflows/eval-samplifi-against-dataset.yaml
+++ b/.github/workflows/eval-samplifi-against-dataset.yaml
@@ -56,8 +56,20 @@ jobs:
         conda activate samplifi
         python run-samplifi.py --dataset ${{ github.event.inputs.dataset }} --sample-size "${{ github.event.inputs.sample_size }}" --eval-haaqi --eval-spectral --titrate
 
+    - name: Analyze results
+      run: |
+        source $(conda info --base)/etc/profile.d/conda.sh
+        conda activate samplifi
+        python analyze-results.py --file evaluation_${{ github.event.inputs.dataset }}.json --omit-f0
+
     - name: Upload JSON as artifact
       uses: actions/upload-artifact@v4
       with:
         name: samplifi-output
         path: evaluation_${{ github.event.inputs.dataset }}.json
+
+    - name: Upload analysis folder as artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: samplifi-analysis
+        path: analysis
