--- a/.github/workflows/eval-samplifi-against-dataset.yaml
+++ b/.github/workflows/eval-samplifi-against-dataset.yaml
@@ -60,7 +60,7 @@ jobs:
       run: |
         source $(conda info --base)/etc/profile.d/conda.sh
         conda activate samplifi
-        python analyze-results.py --file evaluation_${{ github.event.inputs.dataset }}.json --omit-f0
+        python analyze-results.py --file evaluation_${{ github.event.inputs.dataset }}.json
 
     - name: Upload JSON as artifact
       uses: actions/upload-artifact@v4
